--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -33,12 +33,10 @@
                             <div class="clearfix">
                             <div class="row">
                                 <div class="col-md-6">
-
                                     <button type="button" class="signupbtn" id="cancel">Cancel</button>
-
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="submit" class="signupbtn">Entrar</button>
+                                    <button type="submit" class="signupbtn" id="cancel">Entrar</button>
                                 </div>
                             </div>
                         </div>
