--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -1,19 +1,291 @@
 <!--User dashboard-->
 
-<section id="dashboard">
-    <div class="row">
-        <div class="col-4">
+<section class="container-fluid"  id="dashboard">
+    <div class="row perfiluser">
+        <div class="col-md-4">
+            <figure>
+                <img src="./images/General.svg">
+                <figcaption>NOME DO USUARIO</figcaption>
+            </figure>
 
         </div>
 
-        <div class="card col-8" id="minhainfo">
+        <div class="col-md-8" >
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5 class="card-title">MINHAS INFORMAÇÕES</h5><span><i class="fa-pull-right">editar</i></span>
+                        </div>
+
+
+                    </div>
+
+                    <h2 id="separador"></h2>
+
+                   <div class="row">
+                       <div class="col-md-6">
+                           <ul>
+                               <li class="a">NOME</li>
+                               <li class="b">Nome</li>
+                               <li class="a">EMAIL</li>
+                               <li class="b">Email</li>
+                               <li class="a">ENDEREÇO</li>
+                               <li class="b">Endereço</li>
+                               <li class="a">CIDADE</li>
+                               <li class="b">Cidade</li>
+                               <li class="a">PAIS</li>
+                               <li class="b">Pais</li>
+                           </ul>
+                       </div>
+                       <div class="col-md-6">
+                           <ul>
+                               <li class="a">NOME</li>
+                               <li class="b">Nome</li>
+                               <li class="a">EMAIL</li>
+                               <li class="b">Email</li>
+                               <li class="a">ENDEREÇO</li>
+                               <li class="b">Endereço</li>
+                               <li class="a">CIDADE</li>
+                               <li class="b">Cidade</li>
+                               <li class="a">PAIS</li>
+                               <li class="b">Pais</li>
+                           </ul>
+                       </div>
+                   </div>
+                </div>
+
+            </div>
 
         </div>
-
-
-
-
-
     </div>
+</section>
+
+<section class="container-fluid" id="minhasreservas">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="titulo">MINHAS RESERVAS</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 align-self-end">
+            <a class="nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-controls="nav-home" aria-selected="true">RESERVAS ATUAIS</a>
+        </div>
+        <div class="col-md-6">
+            <a class="nav-item nav-link" data-toggle="tab" href="#" role="tab" aria-controls="nav-profile" aria-selected="false">RESERVAS ANTERIORES</a>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                <table id="dt-basic-checkbox" class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th class="th-sm">Plan
+                        </th>
+                        <th class="th-sm">Pickup Data
+                        </th>
+                        <th class="th-sm">Return Data
+                        </th>
+                        <th class="th-sm">Pickup Location
+                        </th>
+                        <th class="th-sm">Salary
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr><tr>
+                        <td></td>
+                        <td>Software Engineer</td>
+                        <td>Edinburgh</td>
+                        <td>23</td>
+                        <td>2008/12/13</td>
+                        <td>$103,600</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Office Manager</td>
+                        <td>London</td>
+                        <td>30</td>
+                        <td>2008/12/19</td>
+                        <td>$90,560</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Support Lead</td>
+                        <td>Edinburgh</td>
+                        <td>22</td>
+                        <td>2013/03/03</td>
+                        <td>$342,000</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Regional Director</td>
+                        <td>San Francisco</td>
+                        <td>36</td>
+                        <td>2008/10/16</td>
+                        <td>$470,600</td>
+                    </tr>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+        </div>
+         <div class="row">
+            <div class="col-md-6">
+                <a href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Recarregar</a>
+            </div>
+             <div class="col-md-6">
+                 <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cancelar</a>
+             </div>
+         </div>
+    </div>
+</section>
+
+<section class="editarinfo container-fluid">
+    <div class="row perfiluser">
+        <div class="col-md-4">
+            <figure>
+                <img src="./images/General.svg">
+                <figcaption>NOME DO USUARIO</figcaption>
+            </figure>
+
+            <div class="editpwd">
+                <div class="card" id="editpwd1">
+                    <div class="card-header" id="editpwd2">CHANGE PASSWORD</div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputOldPassword">Old Password</label>
+                                <input type="password" class="form-control" id="exampleInputOldPassword" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">New Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-8" >
+            <div class="card" id="editarcard">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5 class="card-title">EDITAR INFORMAÇÕES</h5>
+                        </div>
+                    </div>
+
+       <h2 id="separador"></h2>
+
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputNome">Nome</label>
+                                <input type="text" class="form-control" id="inputNome" placeholder="Nome">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputApelido">Apelido</label>
+                                <input type="text" class="form-control" id="inputApelido" placeholder="Apelido">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputEmail4">Email</label>
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputTelefone">Telefone</label>
+                                <input type="Telefone" class="form-control" id="inputTelefone" placeholder="Telefone">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputAddress">Address</label>
+                                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputAddress2">Address Cobrança</label>
+                                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="inputCity">City</label>
+                                <input type="text" class="form-control" id="inputCity">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputZip">Zip</label>
+                                <input type="text" class="form-control" id="inputZip">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputZip">Pais</label>
+                            <input type="text" class="form-control" id="inputPais">
+                        </div>
+                        </div>
+
+                        <div class="col-md-12 pull-right">
+                            <a href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Confirmar</a>
+                            <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cancelar</a>
+
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
 </section>
 
