--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,7 @@
     /* top: 50%; */
     /* left: 50%; */
     /* position: absolute; */
-} 
+}
 #faq {
     position: relative;
     text-align: center;
@@ -284,7 +284,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
+button#cancel{
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -375,6 +375,125 @@ span.psw {
 
 }
 /*************************************perfil do user***************************************/
+
 #dashboard{
     background-color: #cccccc;
+    margin-top: 5.1%;
+    padding: 4% 2%;
+}
+#dashboard .card{
+    background-color: #1FB0C1;
+    padding: 4%;
+    border-radius: 50px;
+}
+
+#dashboard .card-title{
+    color: #23494e;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+#dashboard img{
+    width: 40%;
+    height: 40%;
+}
+#dashboard figure{
+    text-align: center;
+}
+
+#dashboard ul li.a{
+    color: #23494e;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+#dashboard ul li.b{
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+#dashboard ul{
+    list-style: none;
+}
+
+#minhasreservas{
+    padding: 2% 10% 10% 10%;
+    text-align: center;
+    background-color: white;
+}
+
+#minhasreservas .card{
+    border-radius: 30px;-webkit-box-shadow: -3px 4px 22px -3px rgba(0,0,0,0.74);-moz-box-shadow: -3px 4px 22px -3px rgba(0,0,0,0.74);box-shadow: -3px 4px 22px -3px rgba(0,0,0,0.74);
+}
+#minhasreservas h1{
+    color: #1FB0C1;
+    font-weight: bold;
+    margin-top: 5%;
+}
+#minhasreservas #res-at{
+    margin-left: 30%;
+    text-align: right;
+}
+
+#minhasreservas a{
+    color: #1FB0C1;
+    background-color: white;
+    font-size: 1.5rem;
+    padding: 3% 6%;
+    border-radius: 10px;
+    font-weight: bold;
+    border: 1px solid #1FB0C1;
+    width: 70%;
+    height: 110%;
+
+}
+#minhasreservas a.active{
+    background-color: #1FB0C1;
+    color: white;
+
+}
+.lista1{
+    margin-top: 5%;
+}
+
+.editarinfo{
+    background-color: #1FB0C1;
+    margin-top: 5.1%;
+    padding: 4% 10% 10% 10%;
+}
+
+.editarinfo img{
+    width: 40%;
+    height: 40%;
+}
+.editarinfo figure{
+    text-align: center;
+}
+
+.editarinfo #editarcard{
+    background-color: #1FB0C1;
+    border: none;
+}
+.editarinfo .card-title{
+    color: #23494e;
+    font-size: 3rem;
+    font-weight: bold;
+}
+.editarinfo editpwd{
+    margin-left: 4%;
+}
+
+#editpwd1{
+    border-radius: 2rem;
+    width: 80%;
+    margin-top: 15%;
+    margin-left: 2%;
+}
+.editarinfo label{
+    text-align: left;
+    color: #6c757d;
+}
+
+.editarinfo #editpwd2{
+    color: #6c757d;
 }
