--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -28,7 +28,7 @@
         <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12">
-                    <a class="general" href="faq">
+                    <a class="general" href="./faq/1">
                         <img class="ativo" src="./images/General.svg">
                     </a>
 
@@ -40,7 +40,11 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img class="" src="./images/Usage.svg"></div>
+                <div class="col-12">
+                    <a href="./faq/2">
+                        <img class="" src="./images/Usage.svg">
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.USAGE}}</h6></div>
@@ -48,7 +52,11 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img class="" src="./images/Booking%20and%20Payment.svg"></div>
+                <div class="col-12">
+                    <a href="./faq/3">
+                        <img class="" src="./images/Booking%20and%20Payment.svg">
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >{{translation.B_PAYMENT}}</h6></div>
@@ -56,7 +64,11 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img class="" src="./images/Pickup%20or%20shipping.svg"></div>
+                <div class="col-12">
+                    <a href="./faq/4">
+                        <img class="" src="./images/Pickup%20or%20shipping.svg">
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.P_SHIPPING}}</h6></div>
@@ -64,7 +76,11 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img class="" src="./images/Return.svg"></div>
+                <div class="col-12">
+                    <a href="./faq/5">
+                        <img class="" src="./images/Return.svg">
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.RETURN}}</h6></div>
@@ -73,7 +89,11 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img class="" src="./images/Modification%20and%20Cancellation.svg"></div>
+                <div class="col-12">
+                    <a href="./faq/6">
+                        <img class="" src="./images/Modification%20and%20Cancellation.svg">
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">{{translation.MOD_CAN}}</h6></div>
