--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -119,7 +119,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="./booking/6" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="./booking/5" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="./booking/4" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
