--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -28,8 +28,8 @@
         <div class="col-md-3">
             <div class="row text-center mt-4">
                 <div class="col-12">
-                    <a class="general" href="./faq/1">
-                        <img class="ativo" src="./images/General.svg">
+                    <a class="general" href="/faq/1">
+                        <img class="ativo" src="/images/General.svg">
                     </a>
 
                 </div>
