--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -11,10 +11,10 @@
                 <div class="col-md-2 fmenu">MENU</div>
                 <div class="col-md-10 mm">
                     <ul>
-                        <li><a href="./servicos">{{translation.SERVICOS}}</a></li>
-                        <li><a href="./planos">{{translation.PLANOS}}</a></li>
+                        <li><a href="/servicos">{{translation.SERVICOS}}</a></li>
+                        <li><a href="/planos">{{translation.PLANOS}}</a></li>
                         <li><a href="#">{{translation.FAQ}} </a></li>
-                        <li><a href="./booking">{{translation.RESERVAS}} </a></li>
+                        <li><a href="/booking">{{translation.RESERVAS}} </a></li>
                         <li><a href="#">{{translation.ENTRAR}} </a></li>
                     </ul>
                 </div>
