--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -11,14 +11,14 @@
 <!--      navbar-nav ml-auto mr-3-->
     <ul class="navbar-nav ml-auto mr-4">
       <li class="nav-item active">
-            <a class="nav-link"  href="./servicos">{{translation.SERVICOS}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link"  href="/servicos">{{translation.SERVICOS}}<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-            <a class="nav-link"  href="./planos">{{translation.PLANOS}}</a>
+            <a class="nav-link"  href="/planos">{{translation.PLANOS}}</a>
         </li>
         <li class="nav-item">
 
-            <a class="nav-link"   href="./faq">{{translation.FAQ}}</a>
+            <a class="nav-link"   href="/faq">{{translation.FAQ}}</a>
         </li>
         <li class="nav-item dropdown">
           {{#if_equal translation lang 'en'}}
@@ -69,7 +69,7 @@
         {{/if}}
     </ul>
     <form class="form-inline my-2 my-lg-0">
-            <a href="./planos#offers" class="btn btn-info my-2 my-sm-0" >{{translation.ONLINE_BOOKING}}</a>
+            <a href="/planos#offers" class="btn btn-info my-2 my-sm-0" >{{translation.ONLINE_BOOKING}}</a>
     </form>
   </div>
  </div>
