--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Beneficios 1.svg"></div>
+                <div class="col-12"><img src="/images/Beneficios 1.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h5 class="text-center" >BENEFICIOS DO SERVIÇO</h5></div>
@@ -30,7 +30,7 @@
         </div>
         <div class="col-md-3">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Beneficios 2.svg"></div>
+                <div class="col-12"><img src="/images/Beneficios 2.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -38,7 +38,7 @@
         </div>
         <div class="col-md-3">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Beneficios 3.svg"></div>
+                <div class="col-12"><img src="/images/Beneficios 3.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-3">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Beneficios 4.svg"></div>
+                <div class="col-12"><img src="/images/Beneficios 4.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
@@ -64,13 +64,13 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text  font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/1" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking/1" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -78,13 +78,13 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/2" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking/2" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
@@ -92,13 +92,13 @@
             <div class="pacote text-center">
                 <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
-                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
                     <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking/3" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    <a href="/booking/3" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
