--- a/views/user/editar.handlebars
+++ b/views/user/editar.handlebars
@@ -5,7 +5,7 @@
             <figure>
                 <img src="../images/General.svg">
                 <figcaption>NOME DO USUARIO</figcaption>
-            </figure>
+            </figure> 
 
             <div class="editpwd">
                 <div class="card" id="editpwd1">
@@ -13,13 +13,15 @@
                     <div class="card-body">
                         <form>
                             <div class="form-group">
-                                <label for="exampleInputOldPassword">Old Password</label>
-                                <input type="password" class="form-control" id="exampleInputOldPassword" placeholder="">
+                                <label for="exampleInputEmail1">Password antigo</label>
+                                <input type="password" class="form-control"  placeholder="Enter old passworrd">
+                                
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">New Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+                                <label for="exampleInputPassword1">Novo Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
                             </div>
+                            <button type="submit" class="btn btn-primary">Mudar</button>
                         </form>
                     </div>
                 </div>
