--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -223,25 +223,25 @@
     </div>
 
     <!-- codigos do formulario -->
-    <div class="row">
+    <div class="row fff">
         <div id="form-1" class="col-md-9">
             <form action="/booking/orders" method="POST">
                 <!-- step orders -->
                 <div id="step1"  class="tab">
                     <div class="form-row">
                         <div class="form-group col-md-6">
+                            <label for="inputPickupdate">{{translation.PICKUP_DATE}}</label>
+                            <input type="date" name="pdate" class="form-control" id="inputPickupdate" placeholder="dd/mm/yyyy">
+                        </div>
+                        <div class="form-group col-md-6">
                             <label for="inputNumber">{{translation.SN_DAYWIFI}}</label>
                             <select id="inputNumber"  name="numdays" class="form-control">
                                 <option selected>Select</option>
-                                <option value="5">5 dias</option>
-                                <option value="10">10 dias</option>
-                                <option value="20">20 dias</option>
-                                <option value="30">30 dias</option>
+                                <option >1</option>
+                                <option >1</option>
+                                <option >1</option>
+                                <option >1</option>
                             </select>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputPickupdate">{{translation.PICKUP_DATE}}</label>
-                            <input type="date" name="pdate" class="form-control" id="inputPickupdate" placeholder="dd/mm/yyyy">
                         </div>
                     </div>
                     <div class="form-row">
@@ -263,11 +263,81 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        
                         <div class="form-group col-md-6">
                             <label for="inputFlightnumber">{{translation.FN}}</label>
                             <input type="number" name="flynum" class="form-control" id="inputFlightnumber" placeholder="">
                         </div>
                     </div>
+                    
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4 d-flex justify-content-center coluna">
+                                <div class="pacote text-center">
+                                    <h5 class="card-header planocabeca">{{translation.PN}}</h5>
+                                    <div class="card-body">
+                                        <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
+                                        <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                                        <h1 class="card-text  font-weight-bold">000$</h1>
+                                        <p class="card-text font-weight-bold">Data plan per day</p>
+                                        <p class="card-text font-weight-bold">Number of devices</p>
+                                        <p class="card-text font-weight-bold">Battery life</p>
+                                        <div class="choose">
+                                            <label class="containers">Escolher
+                                                <input type="radio"  name="plano">
+                                                <input type="hidden" id="custId" name="planotipo" value="c">
+                                                <span class="checkmark"></span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 d-flex justify-content-center coluna">
+                                <div class="pacote text-center">
+                                    <h5 class="card-header planocabeca">{{translation.PN}}</h5>
+                                    <div class="card-body">
+                                        <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
+                                        <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                                        <h1 class="card-text  font-weight-bold">000$</h1>
+                                        <p class="card-text font-weight-bold">Data plan per day</p>
+                                        <p class="card-text font-weight-bold">Number of devices</p>
+                                        <p class="card-text font-weight-bold">Battery life</p>
+                                        <div class="choose">
+                                            <label class="containers">Escolher
+                                                <input type="radio"  name="plano">
+                                                <input type="hidden" id="custId" name="planotipo" value="c">
+                                                <span class="checkmark"></span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 d-flex justify-content-center coluna">
+                                <div class="pacote text-center">
+                                    <h5 class="card-header planocabeca">{{translation.PN}}</h5>
+                                    <div class="card-body">
+                                        <img class="card-img mt-0" src="/images/Router.jpg" alt="Card image">
+                                        <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                                        <h1 class="card-text  font-weight-bold">000$</h1>
+                                        <p class="card-text font-weight-bold">Data plan per day</p>
+                                        <p class="card-text font-weight-bold">Number of devices</p>
+                                        <p class="card-text font-weight-bold">Battery life</p>
+                                        <div class="choose">
+                                            <label class="containers">Escolher
+                                                <input type="radio"  name="plano">
+                                                <input type="hidden" id="custId" name="planotipo" value="c">
+                                                <span class="checkmark"></span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                                
+                    </div>
+
+
                     <div class="form-group">
                         <a href="#" class="btn btn-danger next" id="next-1">{{translation.NEXT}}</a>
                     </div>
