--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -69,7 +69,7 @@
         {{/if}}
     </ul>
     <form class="form-inline my-2 my-lg-0">
-            <a href="/planos#offers" class="btn btn-info my-2 my-sm-0" >{{translation.ONLINE_BOOKING}}</a>
+            <a href="/booking" class="btn btn-info my-2 my-sm-0" >{{translation.ONLINE_BOOKING}}</a>
     </form>
   </div>
  </div>
