--- a/views/user/dash.handlebars
+++ b/views/user/dash.handlebars
@@ -14,8 +14,8 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="./users/config"><i class="float-right fas fa-sign-out-alt"></i></a></h5>
-                        </div> 
+                            <h5 class="card-title">MINHAS INFORMAÇÕES <a href="./users/config"><i class="float-right fas fa-user-edit"></i></a></h5>
+                        </div>
                     </div>
 
                     <h2 id="separador"></h2>
@@ -28,11 +28,11 @@
                                <li class="a">EMAIL</li>
                                <li class="b">{{User.email}}</li>
                                <li class="a">ENDEREÇO</li>
-                               <li class="b">latada, praia, cabo verde</li>
+                               <li class="b">{{User.street_adress}}</li>
                                <li class="a">CIDADE</li>
-                               <li class="b">Praia</li>
+                               <li class="b">{{User.city}}</li>
                                <li class="a">PAIS</li>
-                               <li class="b">Cabo Verde</li>
+                               <li class="b">{{User.country}}</li>
                            </ul>
                        </div>
                        <div class="col-md-6">
@@ -40,11 +40,11 @@
                                <li class="a">APELIDO</li>
                                <li class="b">{{User.lastName}}</li>
                                <li class="a">TELEFONE/MOVEL</li>
-                               <li class="b">(+238 000 00 00)</li>
+                               <li class="b">{{User.phone}}</li>
                                <li class="a">ENDEREÇO DE COBRANÇA</li>
-                               <li class="b">latada, praia, cabo verde</li>
+                               <li class="b">{{User.biling_adress}}</li>
                                <li class="a">CODIGO ZIP</li>
-                               <li class="b">3125</li>
+                               <li class="b">{{User.zip_code}}</li>
                            </ul>
                        </div>
                    </div>
@@ -63,12 +63,12 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-6 align-self-end">
-            <a class="nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-controls="nav-home" aria-selected="true">RESERVAS ATUAIS</a>
+    <div class="row reservabotao mt-4">
+        <div class="col-6">
+            <a class="reserva nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-selected="true">RESERVAS ATUAIS</a>
         </div>
-        <div class="col-md-6">
-            <a class="nav-item nav-link" data-toggle="tab" href="#" role="tab" aria-controls="nav-profile" aria-selected="false">RESERVAS ANTERIORES</a>
+        <div class="col-6">
+            <a class="reserva nav-item nav-link active" data-toggle="tab" href="#" role="tab" aria-selected="true">RESERVAS ATUAIS</a>
         </div>
     </div>
 
@@ -80,7 +80,7 @@
                 <table id="dt-basic-checkbox" class="table table-striped table-hover">
                     <thead>
                     <tr>
-                        <th></th>
+                        <th>Select</th>
                         <th class="th-sm">Plan
                         </th>
                         <th class="th-sm">Pickup Data
@@ -95,49 +95,84 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1" unchecked>
+                                <label class="custom-control-label" for="customCheck1">1</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck2" unchecked>
+                                <label class="custom-control-label" for="customCheck2">2</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck3" unchecked>
+                                <label class="custom-control-label" for="customCheck3">3</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck4" unchecked>
+                                <label class="custom-control-label" for="customCheck4">4</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck5" unchecked>
+                                <label class="custom-control-label" for="customCheck5">5</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck6" unchecked>
+                                <label class="custom-control-label" for="customCheck6">6</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
                         <td>2008/12/13</td>
                         <td>$103,600</td>
                     </tr><tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck7" unchecked>
+                                <label class="custom-control-label" for="customCheck7">7</label>
+                            </div>
+                        </td>
                         <td>Software Engineer</td>
                         <td>Edinburgh</td>
                         <td>23</td>
@@ -145,7 +180,12 @@
                         <td>$103,600</td>
                     </tr>
                     <tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck8" unchecked>
+                                <label class="custom-control-label" for="customCheck8">8</label>
+                            </div>
+                        </td>
                         <td>Office Manager</td>
                         <td>London</td>
                         <td>30</td>
@@ -153,7 +193,12 @@
                         <td>$90,560</td>
                     </tr>
                     <tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck9" unchecked>
+                                <label class="custom-control-label" for="customCheck9">9</label>
+                            </div>
+                        </td>
                         <td>Support Lead</td>
                         <td>Edinburgh</td>
                         <td>22</td>
@@ -161,7 +206,12 @@
                         <td>$342,000</td>
                     </tr>
                     <tr>
-                        <td></td>
+                        <td>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck10" unchecked>
+                                <label class="custom-control-label" for="customCheck10">10</label>
+                            </div>
+                        </td>
                         <td>Regional Director</td>
                         <td>San Francisco</td>
                         <td>36</td>
@@ -173,12 +223,12 @@
                 </div>
             </div>
         </div>
-         <div class="row">
+         <div class="row mt-5">
             <div class="col-md-6">
-                <a href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Recarregar</a>
+                <a href="/pagamento" class="btn btn-info btn-lg active" id="recarregar" role="button" aria-pressed="true">Recarregar</a>
             </div>
              <div class="col-md-6">
-                 <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cancelar</a>
+                 <a href="#" class="btn btn-secondary btn-lg active" id="cancelar" role="button" aria-pressed="true">Cancelar</a>
              </div>
          </div>
     </div>
